# amelis-smime-decrypt

./: .env.example  README.md  pyproject.toml
src/: amelis_smime_decrypt.py
src/amelis_smime_decrypt/: __init__.py  attachment.py  certificate.py  cli.py  imap.py  pdf_parser.py  smime.py
tests/: __init__.py  test_attachment.py  test_cli.py  test_imap.py
